@@ -1,77 +1,74 @@
 package com.htilssu.sport.controller;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.htilssu.sport.data.dtos.CoachDto;
+import com.htilssu.sport.data.mappers.CoachMapper;
+import com.htilssu.sport.data.models.Coach;
+import com.htilssu.sport.service.CoachService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
-import com.htilssu.sport.data.dtos.CoachDto;
-import com.htilssu.sport.data.models.Coach;
-import com.htilssu.sport.service.CoachService;
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/coach")
 public class CoachController {
 
-    @Autowired
     private final CoachService coachService;
+    private final CoachMapper coachMapper;
 
-    public CoachController(CoachService coachService) {
+    // Constructor injection để đảm bảo các service và mapper luôn có sẵn
+    @Autowired
+    public CoachController(CoachService coachService, CoachMapper coachMapper) {
         this.coachService = coachService;
+        this.coachMapper = coachMapper;
     }
 
+    // Lấy tất cả các coach
     @GetMapping
     public List<CoachDto> getAllCoaches() {
         List<Coach> coaches = coachService.findAll();
-        return coaches.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+        return coaches.stream().map(coachMapper::toDto).toList(); // Sử dụng coachMapper để chuyển đổi từ Coach sang
+                                                                  // CoachDto
     }
 
+    // Lấy thông tin coach theo ID và trả về toàn bộ dữ liệu của coach
     @GetMapping("/{id}")
     public ResponseEntity<CoachDto> getCoachById(@PathVariable Long id) {
         return coachService.findById(id)
-                .map(this::convertToDto)
-                .map(coachDto -> ResponseEntity.ok(coachDto))
-                .orElse(new ResponseEntity<>(HttpStatus.NOT_FOUND));
+                .map(coachMapper::toDto) // Chuyển đổi Coach sang CoachDto
+                .map(ResponseEntity::ok)
+                .orElse(new ResponseEntity<>(HttpStatus.NOT_FOUND)); // Nếu không tìm thấy coach, trả về 404
     }
 
+    // Thêm mới một coach
     @PostMapping("/add")
-    public ResponseEntity<CoachDto> addCoach(@RequestBody Coach coach) {
-        Coach savedCoach = coachService.save(coach);
-        return new ResponseEntity<>(convertToDto(savedCoach), HttpStatus.CREATED);
+    public ResponseEntity<CoachDto> addCoach(@RequestBody CoachDto coachDto) {
+        Coach coach = coachMapper.toEntity(coachDto); // Chuyển đổi từ CoachDto sang Coach entity
+        Coach savedCoach = coachService.save(coach); // Lưu vào cơ sở dữ liệu
+        return new ResponseEntity<>(coachMapper.toDto(savedCoach), HttpStatus.CREATED); // Trả về CoachDto đã lưu
     }
 
+    // Cập nhật thông tin coach theo ID
     @PutMapping("/edit/{id}")
-    public ResponseEntity<CoachDto> updateCoach(@PathVariable Long id, @RequestBody Coach coach) {
+    public ResponseEntity<CoachDto> updateCoach(@PathVariable Long id, @RequestBody CoachDto coachDto) {
         if (!coachService.findById(id).isPresent()) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND); // Nếu không tìm thấy coach với ID, trả về lỗi 404
         }
-        coach.setId(id);
-        Coach updatedCoach = coachService.save(coach);
-        return ResponseEntity.ok(convertToDto(updatedCoach));
+        Coach coach = coachMapper.toEntity(coachDto); // Chuyển đổi từ CoachDto sang Coach entity
+        coach.setId(id); // Đặt ID cho coach
+        Coach updatedCoach = coachService.save(coach); // Lưu vào cơ sở dữ liệu
+        return ResponseEntity.ok(coachMapper.toDto(updatedCoach)); // Trả về thông tin đã cập nhật
     }
 
+    // Xóa một coach theo ID
     @DeleteMapping("/delete/{id}")
     public ResponseEntity<Void> deleteCoach(@PathVariable Long id) {
         if (!coachService.findById(id).isPresent()) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND); // Nếu không tìm thấy coach, trả về lỗi 404
         }
-        coachService.deleteById(id);
-        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-    }
-
-    private CoachDto convertToDto(Coach coach) {
-        return new CoachDto(coach.getId());
+        coachService.deleteById(id); // Xóa coach theo ID
+        return new ResponseEntity<>(HttpStatus.NO_CONTENT); // Trả về mã 204 khi xóa thành công
     }
 }
